--- a/views/static/style.css
+++ b/views/static/style.css
@@ -4,3 +4,14 @@ body{
 .element-list li{
     word-wrap:break-word;
 }
+
+.time{
+    display:block;
+    float:right;
+    color:gray;
+    font-size:0.8em
+}
+
+.sha1{
+    text-decoration:underline;
+}
