디자인 개선 물론 안이쁨

--- a/views/static/style.css
+++ b/views/static/style.css
@@ -4,6 +4,9 @@ body{
 .element-list li{
     word-wrap:break-word;
 }
+.list-group a {
+  mix-blend-mode: multiply;
+}
 
 .time{
     display:block;
