--- a/gistory/views/static/style.css
+++ b/gistory/views/static/style.css
@@ -1,7 +1,9 @@
 body{
-    font-family: 'Source Sans Pro', sans-serif;
     padding:2rem;
     padding-top:0;
+}
+*{
+    font-family: 'Source Sans Pro', sans-serif;
 }
 .page-header{
     margin:0 !important;
@@ -53,4 +55,5 @@ h1{
     border-radius:0;
     margin:0;
     background-color: rgba(245, 245, 245, 0.55);
+    line-height:1.7;
 }
