--- a/gistory/views/static/style.css
+++ b/gistory/views/static/style.css
@@ -57,3 +57,11 @@ h1{
     background-color: rgba(245, 245, 245, 0.55);
     line-height:1.7;
 }
+
+.help {
+    float: right;
+}
+
+.help img {
+    width: 20px;
+}
