선택한 항목의 테두리를 검은색으로 개선

--- a/gistory/views/static/style.css
+++ b/gistory/views/static/style.css
@@ -65,3 +65,9 @@ h1{
 .help img {
     width: 20px;
 }
+
+a.active {
+    background-color: black !important;
+    color: white !important;
+    border: 1px solid black !important;
+}
