--- a/gistory/views/static/style.css
+++ b/gistory/views/static/style.css
@@ -70,4 +70,5 @@ a.active {
     background-color: black !important;
     color: white !important;
     border: 1px solid black !important;
+    text-decoration: none;
 }
