--- a/gistory/views/static/style.css
+++ b/gistory/views/static/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 * {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif !important;
 }
 
 .page-header {
