--- a/gistory/views/static/style.css
+++ b/gistory/views/static/style.css
@@ -1,6 +1,6 @@
 body {
     padding: 2rem;
-    padding-top: 0;
+    padding-top: 2rem;
 }
 
 * {
@@ -13,10 +13,7 @@ body {
     border-bottom: none;
 }
 
-h1 {
-    font-size: 3rem;
-    font-weight: 200;
-}
+
 
 .element-list li {
     word-wrap: break-word;
@@ -99,6 +96,7 @@ pre {
     flex-direction: row;
     width: 100%;
     padding: 0;
+    padding-top: 1rem;
 }
 
 .element-list {
@@ -114,4 +112,26 @@ pre {
 .container-fluid {
     margin: 0 !important;
     padding: 0 !important;
+    padding-top: 3rem;
+}
+
+h1 {
+    font-size: 3rem;
+    font-weight: 200;
+    float: left;
+    padding: 0;
+    margin: 0;
+}
+
+.manual {
+    float: right;
+    background-image: url("help.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
+}
+
+.manual span {
+    visibility: hidden;
 }
