내용이 많은 경우 접기 기능 추가

--- a/gistory/views/static/style.css
+++ b/gistory/views/static/style.css
@@ -78,7 +78,7 @@ a.active {
 }
 
 pre {
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -143,4 +143,8 @@ h1 {
 }
 .extra td{
     padding-left:2rem;
+}
+
+.expand {
+    display: none;
 }
